tests/auto/widgets/itemviews/qtablewidget/tst_qtablewidget.cpp
@@ -83,6 +83,8 @@ private slots:
     void setItemData();
     void cellWidget();
     void cellWidgetGeometry();
+    void sizeHint_data();
+    void sizeHint();
     void task231094();
     void task219380_removeLastRow();
     void task262056_sortDuplicate();
@@ -1448,6 +1450,56 @@ void tst_QTableWidget::cellWidgetGeometry()
     tw.scrollToTop();
     // check if updateEditorGeometries has set the correct y pos for the editors
     QCOMPARE(tw.visualItemRect(item).top(), le->geometry().top());
+}
+
+void tst_QTableWidget::sizeHint_data()
+{
+    QTest::addColumn<int>("scrollBarPolicy");
+    QTest::addColumn<QSize>("viewSize");
+    QTest::newRow("ScrollBarAlwaysOn") << static_cast<int>(Qt::ScrollBarAlwaysOn) << QSize();
+    QTest::newRow("ScrollBarAlwaysOff") << static_cast<int>(Qt::ScrollBarAlwaysOff) << QSize();
+    // make sure the scrollbars are shown by resizing the view to 40x40
+    QTest::newRow("ScrollBarAsNeeded (40x40)") << static_cast<int>(Qt::ScrollBarAsNeeded) << QSize(40, 40);
+    QTest::newRow("ScrollBarAsNeeded (1000x1000)") << static_cast<int>(Qt::ScrollBarAsNeeded) << QSize(1000, 1000);
+}
+
+void tst_QTableWidget::sizeHint()
+{
+    QFETCH(int, scrollBarPolicy);
+    QFETCH(QSize, viewSize);
+
+    QTableWidget view(2, 2);
+    view.setSizeAdjustPolicy(QAbstractScrollArea::AdjustToContents);
+    view.setVerticalScrollBarPolicy(static_cast<Qt::ScrollBarPolicy>(scrollBarPolicy));
+    view.setHorizontalScrollBarPolicy(static_cast<Qt::ScrollBarPolicy>(scrollBarPolicy));
+    for (int r = 0 ; r < view.rowCount(); ++r)
+        for (int c = 0 ; c < view.columnCount(); ++c)
+            view.setItem(r, c, new QTableWidgetItem(QString("%1/%2").arg(r).arg(c)));
+
+    view.show();
+    QVERIFY(QTest::qWaitForWindowExposed(&view));
+    if (viewSize.isValid()) {
+        view.resize(viewSize);
+        view.setColumnWidth(0, 100);
+        view.setRowHeight(0, 100);
+        QTRY_COMPARE(view.size(), viewSize);
+    }
+
+    auto sizeHint = view.sizeHint();
+    view.hide();
+    QCOMPARE(view.sizeHint(), sizeHint);
+
+    view.horizontalHeader()->hide();
+    view.show();
+    sizeHint = view.sizeHint();
+    view.hide();
+    QCOMPARE(view.sizeHint(), sizeHint);
+
+    view.verticalHeader()->hide();
+    view.show();
+    sizeHint = view.sizeHint();
+    view.hide();
+    QCOMPARE(view.sizeHint(), sizeHint);
 }
 
 void tst_QTableWidget::task231094()
